...
            notifyUser("ON THE HOUSE", "Please Fill In All Fields")
        }
        
    }
    
    
    var Array = ["Please Select", "Australian Capital Territory", "New South Wales", "Northern Territory", "Queensland", "South Australia", "Tasmania", "Victoria", "Western Australia"]
    
    func textFieldShouldReturn(_ textField: UITextField) -> Bool{
        self.view.endEditing(true)
        
        return false
    }
...
